# quick_design

./: .env.example  .gitignore  LICENSE  README.md  TEAM_GUIDE.md  install.sh  pyproject.toml  requirements.md  requirements.txt  setup.py
configs/: config.default.yaml  openclaw.example.json
design_systems/dark-modern/: DESIGN.md
design_systems/default/: DESIGN.md
design_systems/linear/: DESIGN.md
design_systems/stripe/: DESIGN.md
docs/: index.html  robots.txt  sitemap.xml
src/: server.py
src/core/: gemini.py  pptx_builder.py  prompt_builder.py  renderer.py
src/skills/: dashboard.md  email_marketing.md  ferrari_automotive.md  landing_page.md  pitch_deck.md  social_post.md
src/tools/: catalog.py  generate.py
tests/: test_core.py
