[project]
name = "open-design-mcp"
version = "1.0.0"
description = "Open Design MCP server - generates design artifacts via Gemini, delivers PDF via OpenClaw WhatsApp"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "google-generativeai==0.8.3",
    "python-dotenv==1.0.1",
    "httpx==0.27.0",
]

[project.scripts]
open-design-mcp = "src.server:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
